# sdkwork-invoice

./: AGENTS.md  CODEX.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.workflow.json
.github/workflows/: package.yml
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apps/: README.md
crates/sdkwork-api-invoice-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-invoice-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-invoice-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-invoice-standalone-gateway/: Cargo.toml
crates/sdkwork-api-invoice-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-invoice-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-invoice-repository-sqlx/src/: lib.rs  postgres_invoice.rs  sqlite_invoice.rs
crates/sdkwork-commerce-invoice-service/: Cargo.toml  README.md
crates/sdkwork-commerce-invoice-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-invoice-service/src/commands/: mod.rs
crates/sdkwork-commerce-invoice-service/src/domain/: mod.rs
crates/sdkwork-commerce-invoice-service/src/ports/: mod.rs
crates/sdkwork-commerce-invoice-service/src/queries/: mod.rs  owner_commands.rs
crates/sdkwork-commerce-invoice-service/src/service/: mod.rs
crates/sdkwork-commerce-invoice-service/tests/: invoice_standard.rs
crates/sdkwork-invoice-api-server/: Cargo.toml
crates/sdkwork-invoice-api-server/src/: lib.rs  main.rs
crates/sdkwork-invoice-database-bootstrap/: Cargo.toml
crates/sdkwork-invoice-database-bootstrap/src/: lib.rs
crates/sdkwork-invoice-database-host/: Cargo.toml
crates/sdkwork-invoice-database-host/src/: lib.rs
crates/sdkwork-invoice-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-invoice-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-invoice-repository-sqlx/: Cargo.toml
crates/sdkwork-invoice-repository-sqlx/src/: postgres_invoice.rs  sqlite_invoice.rs
crates/sdkwork-invoice-service/: Cargo.toml  README.md
crates/sdkwork-invoice-service-host/: Cargo.toml
crates/sdkwork-invoice-service-host/src/: lib.rs
crates/sdkwork-invoice-service/specs/: README.md
crates/sdkwork-invoice-service/src/domain/: mod.rs
crates/sdkwork-invoice-service/src/ports/: mod.rs
crates/sdkwork-invoice-service/src/queries/: mod.rs  owner_commands.rs
crates/sdkwork-invoice-service/src/service/: mod.rs
crates/sdkwork-invoice-service/tests/: invoice_standard.rs
crates/sdkwork-invoice-standalone-gateway/: Cargo.toml
crates/sdkwork-invoice-standalone-gateway/src/: main.rs
crates/sdkwork-router-invoice-app-api/: Cargo.toml
crates/sdkwork-router-invoice-app-api/src/: invoice_router.rs  lib.rs
crates/sdkwork-router-invoice-backend-api/: Cargo.toml
crates/sdkwork-router-invoice-backend-api/src/: lib.rs
crates/sdkwork-routes-invoice-app-api/: Cargo.toml
crates/sdkwork-routes-invoice-app-api/specs/: component.spec.json
crates/sdkwork-routes-invoice-app-api/src/: command_headers.rs  http_route_manifest.rs  invoice_router.rs  lib.rs  routes.rs
crates/sdkwork-routes-invoice-backend-api/: Cargo.toml
crates/sdkwork-routes-invoice-backend-api/specs/: component.spec.json
crates/sdkwork-routes-invoice-backend-api/src/: lib.rs  routes.rs
database/: README.md  database.manifest.json
database/contract/: schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_invoice_baseline.sql
database/ddl/baseline/sqlite/: 0001_invoice_baseline.sql
database/migrations/postgres/: 0001_invoice_tables.down.sql
database/migrations/sqlite/: 0001_invoice_tables.up.sql
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql
database/seeds/locales/de-DE/: README.md
database/seeds/locales/en-US/: README.md
database/seeds/locales/fr-FR/: README.md
database/seeds/locales/ja-JP/: README.md
database/seeds/locales/ko-KR/: README.md
database/seeds/locales/ru-RU/: README.md
database/seeds/locales/zh-CN/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
sdks/_route-manifests/app-api/: sdkwork-routes-invoice-app-api.route-manifest.json
sdks/sdkwork-invoice-app-sdk/: sdk-manifest.json
sdks/sdkwork-invoice-app-sdk/openapi/: sdkwork-invoice-app-api.openapi.json
sdks/sdkwork-invoice-app-sdk/sdkwork-invoice-app-sdk-typescript/: package.json
sdks/sdkwork-invoice-app-sdk/sdkwork-invoice-app-sdk-typescript/src/: index.ts
sdks/sdkwork-invoice-app-sdk/specs/: component.spec.json
specs/: component.spec.json  iam.module.manifest.json
tools/: invoice_api_sdk_generate.mjs
