[workspace]
resolver = "2"
members = [
  "crates/sdkwork-api-invoice-assembly",
  "crates/sdkwork-invoice-service",
  "crates/sdkwork-invoice-repository-sqlx",
  "crates/sdkwork-routes-invoice-app-api",
  "crates/sdkwork-invoice-database-host",
  "crates/sdkwork-invoice-database-bootstrap",
  "crates/sdkwork-invoice-service-host",
  "crates/sdkwork-api-invoice-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-or-later"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork-contract-service = { path = "../sdkwork-account/crates/sdkwork-contract-service" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-context-service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-invoice-service = { path = "crates/sdkwork-invoice-service" }
sdkwork-invoice-repository-sqlx = { path = "crates/sdkwork-invoice-repository-sqlx" }
sdkwork-routes-invoice-app-api = { path = "crates/sdkwork-routes-invoice-app-api" }
sdkwork-invoice-database-host = { path = "crates/sdkwork-invoice-database-host" }
sdkwork-invoice-database-bootstrap = { path = "crates/sdkwork-invoice-database-bootstrap" }
sdkwork-invoice-service-host = { path = "crates/sdkwork-invoice-service-host" }
sdkwork-api-invoice-assembly = { path = "crates/sdkwork-api-invoice-assembly" }
