[package]
name = "sdkwork-api-invoice-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-invoice application HTTP plane."

[lib]
name = "sdkwork_api_invoice_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-invoice-service-host.workspace = true
sdkwork-routes-invoice-app-api.workspace = true
