[package]
name = "sdkwork-api-invoice-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-invoice-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_invoice_assembly = { package = "sdkwork-api-invoice-assembly", path = "../sdkwork-api-invoice-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_invoice_app_api.workspace = true
sdkwork_routes_invoice_backend_api.workspace = true
sdkwork_invoice_service_host.workspace = true
