[package]
name = "sdkwork-api-invoice-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-invoice-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork-api-invoice-assembly.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork-routes-invoice-app-api.workspace = true
sdkwork-invoice-service-host.workspace = true
