[package]
name = "sdkwork-commerce-invoice-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sdkwork_commerce_contract_service.workspace = true
sdkwork_commerce_invoice_service.workspace = true
