[package]
publish.workspace = true
name = "sdkwork-commerce-invoice-service"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SDKWork commerce invoice and tax document domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_contract_service.workspace = true
