[package]
name = "sdkwork-invoice-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "invoice-server"
path = "src/main.rs"

[dependencies]
sdkwork_invoice_gateway_assembly = { package = "sdkwork-invoice-gateway-assembly", path = "../sdkwork-invoice-gateway-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_invoice_app_api.workspace = true
sdkwork_routes_invoice_backend_api.workspace = true
sdkwork_invoice_service_host.workspace = true
