[package]
name = "sdkwork-invoice-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork-contract-service.workspace = true
sdkwork-invoice-service.workspace = true
sqlx = { workspace = true }

[dev-dependencies]
tokio.workspace = true
